--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,19 @@ jobs:
   # INSTALL DEPS
   install:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]  # Add more OS's here
+        node-version: ["18.18.0"]
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "18.18.0"
+          node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - name: Install deps via Yarn
         run: yarn setup
@@ -35,13 +40,17 @@ jobs:
 
   # BUILD THE EXTENSION
   build:
-    runs-on: ubuntu-latest
-    needs: [install]
+    runs-on: ${{ matrix.os }}
+    needs: install
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "18.18.0"
+          node-version: ${{ matrix.node-version }}
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v3
         with:
@@ -70,10 +79,15 @@ jobs:
       - name: Remove old screenshots
         run: rm -rf screenshots/*
   # CHROME TESTS
-  chrome-e2e-onboarding:
-    runs-on: ubuntu-latest
-    timeout-minutes: 18
+
+  chrome-e2e-tests:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        test-type: [onboarding, parallel, swap, send, dappInteractions, optimism-send]
     needs: [build]
+    timeout-minutes: 18
     env:
       DISPLAY: :0
       VITEST_SEGFAULT_RETRY: 4
@@ -82,177 +96,35 @@ jobs:
       - uses: ./.github/actions/chromeTestsSetup
         with:
           gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e onboarding (Chrome)
-        id: ChromeE2EOnboarding
+      - name: Run e2e ${{ matrix.test-type }} (Chrome)
         continue-on-error: true
         run: |
           export BROWSER=chrome
-          export OS=linux
+          export OS=${{ matrix.os }}
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:onboarding
-      - name: Upload deps artifacts
-        if: steps.ChromeE2EOnboarding.outcome == 'failure'
+          yarn vitest:${{ matrix.test-type }}
+      - name: Upload screenshots artifacts
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: screenshots
           path: screenshots/
       - name: Fail if any tests failed
-        if: steps.ChromeE2EParallel.outcome == 'failure'
-        run: exit 1
-  chrome-e2e-parallel:
-    runs-on: ubuntu-latest
-    timeout-minutes: 18
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 4
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/chromeTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e parallel (Chrome)
-        id: ChromeE2EParallel
-        continue-on-error: true
-        run: |
-          export BROWSER=chrome
-          export OS=linux
-          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:parallel
-      - name: Upload deps artifacts
-        if: steps.ChromeE2EParallel.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.ChromeE2EParallel.outcome == 'failure'
-        run: exit 1
-  chrome-e2e-swap:
-    runs-on: swaps-runner-bx
-    timeout-minutes: 25
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 3
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/chromeTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e swap (Chrome)
-        id: ChromeE2ESwaps
-        continue-on-error: true
-        run: |
-          export BROWSER=chrome
-          export OS=linux
-          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:swap
-      - name: Upload deps artifacts
-        if: steps.ChromeE2ESwaps.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.ChromeE2ESwaps.outcome == 'failure'
-        run: exit 1
-  chrome-e2e-send:
-    runs-on: send-runner-bx
-    timeout-minutes: 16
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 3
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/chromeTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e send (Chrome)
-        id: ChromeE2ESend
-        continue-on-error: true
-        run: |
-          export BROWSER=chrome
-          export OS=linux
-          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:send
-      - name: Upload deps artifacts
-        if: steps.ChromeE2ESend.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.ChromeE2ESend.outcome == 'failure'
-        run: exit 1
-  chrome-optimism-e2e-send:
-    runs-on: send-runner-bx
-    timeout-minutes: 25
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 3
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/chromeTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run Optimism e2e send (Chrome)
-        id: ChromeOpE2ESend
-        continue-on-error: true
-        run: |
-          export BROWSER=chrome
-          export OS=linux
-          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:send:optimism
-      - name: Upload deps artifacts
-        if: steps.ChromeOpE2ESend.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.ChromeOpE2ESend.outcome == 'failure'
-        run: exit 1
-  chrome-e2e-dappInteractions:
-    runs-on: dapp-interactions-runner-bx
-    timeout-minutes: 25
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 3
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/chromeTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e dappInteractions (Chrome)
-        id: ChromeE2EDappInteractions
-        continue-on-error: true
-        run: |
-          export BROWSER=chrome
-          export OS=linux
-          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:dappInteractions
-      - name: Upload deps artifacts
-        if: steps.ChromeE2EDappInteractions.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.ChromeE2EDappInteractions.outcome == 'failure'
+        if: failure()
         run: exit 1
   # UNIT TESTS
   unit-tests:
-    runs-on: ubuntu-latest
-    needs: [install]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    needs: install
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "18.18.0"
+          node-version: ${{ matrix.node-version }}
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v3
         with:
@@ -274,9 +146,9 @@ jobs:
           version: nightly
       - uses: actions/checkout@v3
         with:
-            repository: 'rainbow-me/browser-extension-env'
-            token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-            path: tmp
+          repository: 'rainbow-me/browser-extension-env'
+          token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+          path: tmp
       - name: Copy dotenv
         run: cat tmp/dotenv >> .env && rm -rf tmp
       - name: Set IS_TESTING=true
@@ -287,13 +159,17 @@ jobs:
 
   # LINT, TYPECHECK, AUDIT
   ci-checks:
-    runs-on: ubuntu-latest
-    needs: [install]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    needs: install
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "18.18.0"
+          node-version: ${{ matrix.node-version }}
       - name: Download deps cache artifacts
         uses: actions/download-artifact@v3
         with:
@@ -307,12 +183,12 @@ jobs:
       - name: Lint
         run: yarn lint
       - name: Audit CI
-        run:  yarn audit:ci
+        run: yarn audit:ci
       - name: Check types
         run: yarn typecheck
   cleanup:
-    runs-on:  ubuntu-latest
-    needs: [chrome-e2e-onboarding, chrome-e2e-parallel, chrome-e2e-swap, chrome-e2e-send, chrome-e2e-dappInteractions, chrome-optimism-e2e-send, unit-tests, ci-checks]
+    runs-on: ubuntu-latest
+    needs: [chrome-e2e-tests, unit-tests, ci-checks]
     steps:
       - uses: geekyeggo/delete-artifact@v2
         with:
