--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -405,12 +405,10 @@ jobs:
       - name: Unzip node_modules
         run: tar xzf node_modules.tar.gz
       - name: Install rust
-        uses: actions-rs/toolchain@v1
+        uses: moonrepo/setup-rust@v1.2.1
         with:
-          toolchain: stable
-          target: wasm32-unknown-unknown
+          channel: stable
           profile: minimal
-          override: true
       - name: Fetch networks
         run: yarn fetch:networks
       - name: Install Anvil
