--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,130 @@ jobs:
           path: build/
       - name: Remove old screenshots
         run: rm -rf screenshots/*
-        
+
+  # FIREFOX TESTS
+  #
+  # firefox-e2e-parallel:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 18
+  #   needs: [build]
+  #   env:
+  #     DISPLAY: :0
+  #     VITEST_SEGFAULT_RETRY: 4
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/actions/firefoxTestsSetup
+  #       with:
+  #         gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+  #     - name: Run e2e parallel (Firefox)
+  #       id: FFE2eParallel
+  #       continue-on-error: true
+  #       run: |
+  #           export BROWSER=firefox
+  #           export OS=linux
+  #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #           yarn firefox:manifest && yarn firefox:zip
+  #           yarn vitest:parallel
+  #     - name: Upload deps artifacts
+  #       if: steps.FFE2eParallel.outcome == 'failure'
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: screenshots
+  #         path: screenshots/
+  #     - name: Fail if any tests failed
+  #       if: steps.FFE2eParallel.outcome == 'failure'
+  #       run: exit 1
+  # firefox-e2e-swap:
+  #   runs-on: swaps-runner-bx
+  #   timeout-minutes: 25
+  #   needs: [build]
+  #   env:
+  #     DISPLAY: :0
+  #     VITEST_SEGFAULT_RETRY: 4
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/actions/firefoxTestsSetup
+  #       with:
+  #         gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+  #     - name: Run e2e Swap (Firefox)
+  #       id: FFE2eSwap
+  #       continue-on-error: true
+  #       run: |
+  #         export BROWSER=firefox
+  #         export OS=linux
+  #         export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #         yarn firefox:manifest && yarn firefox:zip
+  #         yarn vitest:swap
+  #     - name: Upload deps artifacts
+  #       if: steps.FFE2eSwap.outcome == 'failure'
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: screenshots
+  #         path: screenshots/
+  #     - name: Fail if any tests failed
+  #       if: steps.FFE2eSwap.outcome == 'failure'
+  #       run: exit 1
+  # firefox-e2e-send:
+  #   runs-on: send-runner-bx
+  #   timeout-minutes: 16
+  #   needs: [build]
+  #   env:
+  #     DISPLAY: :0
+  #     VITEST_SEGFAULT_RETRY: 4
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/actions/firefoxTestsSetup
+  #       with:
+  #         gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+  #     - name: Run e2e Send (Firefox)
+  #       id: FFE2eSend
+  #       continue-on-error: true
+  #       run: |
+  #           export BROWSER=firefox
+  #           export OS=linux
+  #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #           yarn firefox:manifest && yarn firefox:zip
+  #           yarn vitest:send
+  #     - name: Upload deps artifacts
+  #       if: steps.FFE2eSend.outcome == 'failure'
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: screenshots
+  #         path: screenshots/
+  #     - name: Fail if any tests failed
+  #       if: steps.FFE2eSend.outcome == 'failure'
+  #       run: exit 1
+  # firefox-e2e-dappInteractions:
+  #   runs-on: dapp-interactions-runner-bx
+  #   timeout-minutes: 25
+  #   needs: [build]
+  #   env:
+  #     DISPLAY: :0
+  #     VITEST_SEGFAULT_RETRY: 4
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/actions/firefoxTestsSetup
+  #       with:
+  #         gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+  #     - name: Run e2e Dapp Interactions (Firefox)
+  #       id: FFE2eDappInteractions
+  #       continue-on-error: true
+  #       run: |
+  #         export BROWSER=firefox
+  #         export OS=linux
+  #         export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #         yarn firefox:manifest && yarn firefox:zip
+  #         yarn vitest:dappInteractions
+  #     - name: Upload deps artifacts
+  #       if: steps.FFE2eDappInteractions.outcome == 'failure'
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: screenshots
+  #         path: screenshots/
+  #     - name: Fail if any tests failed
+  #       if: steps.FFE2eDappInteractions.outcome == 'failure'
+  #       run: exit 1
+
   # CHROME TESTS
   chrome-e2e-tests:
     runs-on: ${{ matrix.os }}
