--- a/package.json
+++ b/package.json
@@ -277,7 +277,9 @@
     "braces": "3.0.3",
     "ws": "8.17.1",
     "micromatch": "4.0.8",
-    "webpack": "5.94.0"
+    "webpack": "5.94.0",
+    "path-to-regexp": "6.3.0",
+    "dset": "3.1.4"
   },
   "lavamoat": {
     "allowScripts": {
