--- a/package.json
+++ b/package.json
@@ -96,8 +96,10 @@
     "@ethersproject/transactions": "5.7.0",
     "@ethersproject/units": "5.7.0",
     "@ethersproject/wallet": "5.7.0",
+    "@ledgerhq/evm-tools": "1.2.0",
     "@ledgerhq/hw-app-eth": "6.38.0",
-    "@ledgerhq/hw-transport-webhid": "6.29.2",
+    "@ledgerhq/hw-transport-webhid": "6.28.2",
+    "@ledgerhq/live-network": "1.4.0",
     "@metamask/browser-passworder": "4.1.0",
     "@metamask/eth-sig-util": "7.0.1",
     "@radix-ui/react-accordion": "1.1.2",
@@ -192,7 +194,7 @@
     "audit-ci": "6.3.0",
     "browserify": "17.0.0",
     "chalk": "5.3.0",
-    "chromedriver": "121.0.2",
+    "chromedriver": "128",
     "circular-dependency-plugin": "5.2.2",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
@@ -221,7 +223,7 @@
     "opentype.js": "1.3.4",
     "patch-package": "6.4.7",
     "prettier": "3.0.2",
-    "selenium-webdriver": "4.10.0",
+    "selenium-webdriver": "4.24.1",
     "semver": "7.5.2",
     "supports-color": "5.5.0",
     "svg-path-commander": "1.0.5",
