--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20.16.0"
-          cache: 'yarn'
+          # cache: 'yarn'
       - name: Install deps via Yarn
         run: yarn setup
       - name: Check for frozen lockfile
