--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,12 +42,14 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20.16.0"
-      - name: Download deps cache artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: node_modules.tar.gz
-      - name: Unzip node_modules
-        run: tar xzf node_modules.tar.gz
+      # - name: Download deps cache artifacts
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: node_modules.tar.gz
+      # - name: Unzip node_modules
+      #   run: tar xzf node_modules.tar.gz
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
       - uses: actions/checkout@v4
         with:
             repository: 'rainbow-me/browser-extension-env'
