pin to chrome 128

--- a/.github/actions/chromeTestsSetup/action.yml
+++ b/.github/actions/chromeTestsSetup/action.yml
@@ -12,4 +12,4 @@ runs:
       gh-access-token: ${{ inputs.gh-access-token }}
   - name: Install chrome
     shell: 'bash'
-    run: npx @puppeteer/browsers install chrome@latest
+    run: npx @puppeteer/browsers install chrome@128
