--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -14,6 +14,7 @@
     "GHSA-j8xg-fqg3-53r7",
     "GHSA-67hx-6x53-jw92",
     "GHSA-c24v-8rfc-w8vw",
-    "GHSA-m95q-7qp3-xv42"
+    "GHSA-m95q-7qp3-xv42",
+	"GHSA-p8p7-x288-28g6"
   ]
 }
