--- a/package.json
+++ b/package.json
@@ -279,8 +279,7 @@
     "micromatch": "4.0.8",
     "webpack": "5.94.0",
     "path-to-regexp": "6.3.0",
-    "dset": "3.1.4",
-    "zod": "3.23.8"
+    "dset": "3.1.4"
   },
   "lavamoat": {
     "allowScripts": {
