--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -15,6 +15,7 @@
     "GHSA-67hx-6x53-jw92",
     "GHSA-c24v-8rfc-w8vw",
     "GHSA-m95q-7qp3-xv42",
-	"GHSA-p8p7-x288-28g6"
+	"GHSA-p8p7-x288-28g6",
+	"GHSA-gcx4-mw62-g8wm"
   ]
 }
