--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -13,9 +13,6 @@
     "GHSA-353f-5xf4-qw67",
     "GHSA-j8xg-fqg3-53r7",
     "GHSA-67hx-6x53-jw92",
-    "GHSA-c24v-8rfc-w8vw",
-    "GHSA-m95q-7qp3-xv42",
-	"GHSA-p8p7-x288-28g6",
-	"GHSA-gcx4-mw62-g8wm"
+    "GHSA-c24v-8rfc-w8vw"
   ]
 }
