--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-jest": "27.2.3",
     "eslint-plugin-prettier": "5.0.0",
+    "express": "4.21.1",
     "file-loader": "6.2.0",
     "fs-extra": "10.1.0",
     "geckodriver": "4.3.0",
@@ -278,7 +279,6 @@
     "ws": "8.17.1",
     "micromatch": "4.0.8",
     "webpack": "5.94.0",
-    "path-to-regexp": "6.3.0",
     "dset": "3.1.4",
     "zod": "3.23.8",
     "rollup": "4.22.4"
