--- a/package.json
+++ b/package.json
@@ -281,7 +281,8 @@
     "path-to-regexp": "6.3.0",
     "dset": "3.1.4",
     "zod": "3.23.8",
-    "rollup": "4.22.4"
+    "rollup": "4.22.4",
+    "secp256k1": "5.0.1"
   },
   "lavamoat": {
     "allowScripts": {
