--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@tanstack/react-query-persist-client": "5.35.1",
     "@tanstack/react-virtual": "3.8.1",
     "@trezor/connect-plugin-ethereum": "9.0.2",
+    "@trezor/connect-web": "9.4.2",
     "@types/qs": "6.9.7",
     "@vanilla-extract/css": "1.9.1",
     "@vanilla-extract/css-utils": "0.1.2",
@@ -334,7 +335,15 @@
       "viem>ws>bufferutil": false,
       "viem>ws>utf-8-validate": false,
       "wagmi>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false,
-      "wagmi>@wagmi/connectors>@metamask/sdk>eciesjs>secp256k1": false
+      "wagmi>@wagmi/connectors>@metamask/sdk>eciesjs>secp256k1": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana/web3.js>bigint-buffer": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana/web3.js>rpc-websockets>bufferutil": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana/web3.js>rpc-websockets>utf-8-validate": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/transport>usb": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-has": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>tiny-secp256k1": false,
+      "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-hash": false
     }
   }
 }
