--- a/static/manifest.json
+++ b/static/manifest.json
@@ -29,7 +29,7 @@
     },
     {
       "matches": [
-        "*://connect.trezor.io/9/popup.html"
+        "*://connect.trezor.io/9/*"
       ],
       "js": [
         "./vendor/trezor-content-script.js"
