--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -13,6 +13,7 @@
     "GHSA-353f-5xf4-qw67",
     "GHSA-j8xg-fqg3-53r7",
     "GHSA-67hx-6x53-jw92",
-    "GHSA-c24v-8rfc-w8vw"
+    "GHSA-c24v-8rfc-w8vw",
+    "GHSA-mgfv-m47x-4wqp"
   ]
 }
