--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "audit:ci": "yarn audit-ci --moderate --config audit-ci.jsonc",
     "// Generates a zip file based on the build folder ready to upload to the chrome web store": "",
     "zip": "cd build/ && zip -r ../rainbowbx.zip *",
+    "zip:source": "zip -r ./rainbowbx-source.zip * -x 'build/*' -x '*node_modules/*'",
     "// Build and zip": "",
     "bundle": "yarn build && yarn zip",
     "// Runs tests": "",
