--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "opentype.js": "1.3.4",
     "patch-package": "6.4.7",
     "prettier": "3.0.2",
+    "react-scan": "0.0.54",
     "selenium-webdriver": "4.24.1",
     "semver": "7.5.2",
     "supports-color": "5.5.0",
@@ -346,7 +347,9 @@
       "@trezor/connect-web>@trezor/connect>@trezor/transport>usb": false,
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-has": false,
       "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>tiny-secp256k1": false,
-      "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-hash": false
+      "@trezor/connect-web>@trezor/connect>@trezor/utxo-lib>blake-hash": false,
+      "react-scan>esbuild": false,
+      "react-scan>tsx>esbuild": false
     }
   }
 }
