--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "//enable dev mode": "",
     "devmode:on": "sed -i'' -e 's/IS_DEV.*/IS_DEV=true/g' .env",
     "devmode:off": "sed -i'' -e 's/IS_DEV.*/IS_DEV=false/g' .env",
+    "//enable test mode": "",
+    "testmode:on": "sed -i'' -e 's/IS_TESTING.*/IS_TESTING=true/g' .env",
+    "testmode:off": "sed -i'' -e 's/IS_TESTING.*/IS_TESTING=false/g' .env",
     "// Bumps the pkg.json version": "",
     "bump": "node scripts/bump.js",
     "// Updates the manifest with the settings of a specific target": "",
@@ -53,7 +56,7 @@
     "// Build and zip": "",
     "bundle": "yarn build && yarn zip",
     "// Runs tests": "",
-    "anvil": "ETH_MAINNET_RPC=$(grep ETH_MAINNET_RPC .env | cut -d '=' -f2) && anvil --fork-url $ETH_MAINNET_RPC",
+    "anvil": "ETH_MAINNET_RPC=$(grep ETH_MAINNET_RPC .env | cut -d '=' -f2) && anvil --fork-url $ETH_MAINNET_RPC --fork-block-number 21065950",
     "anvil:optimism": "OPTIMISM_MAINNET_RPC=$(grep OPTIMISM_MAINNET_RPC .env | cut -d '=' -f2) && anvil --fork-url $OPTIMISM_MAINNET_RPC",
     "anvil:kill": "lsof -i :8545|tail -n +2|awk '{print $2}'|xargs -r kill -s SIGINT",
     "test": "./scripts/unit-tests.sh",
@@ -159,7 +162,7 @@
     "react-switch": "7.0.0",
     "socket.io-client": "4.5.3",
     "validator": "13.9.0",
-    "viem": "2.21.0",
+    "viem": "2.21.45",
     "wagmi": "2.8.1",
     "word-wrap": "1.2.4",
     "zustand": "4.1.5"
@@ -273,7 +276,6 @@
     "axios": "1.7.4",
     "follow-redirects": "1.15.6",
     "ip": "2.0.1",
-    "@solana/web3.js": "1.90.2",
     "jose": "4.15.5",
     "phin": "3.7.1",
     "braces": "3.0.3",
@@ -338,6 +340,8 @@
       "viem>ws>utf-8-validate": false,
       "wagmi>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false,
       "wagmi>@wagmi/connectors>@metamask/sdk>eciesjs>secp256k1": false,
+      "@vanilla-extract/vite-plugin>vite>esbuild": false,
+      "wagmi>@wagmi/connectors>@walletconnect/ethereum-provider>@walletconnect/types>@walletconnect/keyvaluestorage>unstorage>listhen>@parcel/watcher": false,
       "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana": false,
       "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana/web3.js>bigint-buffer": false,
       "@trezor/connect-web>@trezor/connect>@trezor/blockchain-link>@solana/web3.js>rpc-websockets>bufferutil": false,
