--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -15,6 +15,7 @@
     "GHSA-67hx-6x53-jw92",
     "GHSA-c24v-8rfc-w8vw",
     "GHSA-mgfv-m47x-4wqp",
-    "GHSA-96g7-g7g9-jxw8"
+    "GHSA-96g7-g7g9-jxw8",
+    "GHSA-2mhj-xmf4-pr8m"
   ]
 }
