--- a/.github/workflows/publish-prod-chrome.yml
+++ b/.github/workflows/publish-prod-chrome.yml
@@ -10,6 +10,10 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          token: ${{ secrets.REPO_TOKEN }}
       - uses: actions/setup-node@v4
         with:
           node-version: "20.16.0"
