--- a/.github/workflows/publish-internal.yml
+++ b/.github/workflows/publish-internal.yml
@@ -1,5 +1,5 @@
 
-name: Publish to Chrome WebStore (Trusted Testers)
+name: Publish to Chrome (Internal)
 
 on:
   schedule:
@@ -55,7 +55,7 @@ jobs:
           name: rainbowbx-v${{ env.release_version }}
           path: build/
       - name: Submit to the chrome webstore
-        uses: PlasmoHQ/bpp@v3
+        uses: PlasmoHQ/bpp@v3.7.0
         with:
           artifact: ./rainbowbx.zip
           keys: ${{ secrets.BPP_KEYS_INTERNAL }}
