--- a/.github/workflows/publish-prod-firefox.yml
+++ b/.github/workflows/publish-prod-firefox.yml
@@ -1,5 +1,5 @@
 
-name: Publish to Firefox Add-Ons Store  (Production)
+name: Publish to Firefox (Prod)
 
 on:
   workflow_dispatch:
@@ -38,13 +38,16 @@ jobs:
         with:
           name: rainbowbx-firefox-v${{ env.release_version }}
           path: build/
-#     - name: Zip it
-#       run: yarn firefox:zip
-#     - name: Submit to the firefox addons store
-#       uses: PlasmoHQ/bpp@v3.5.0
-#       with:
-#         artifact: ./rainbowbx.xpi
-#         keys: ${{ secrets.BPP_KEYS_PROD_FIREFOX }}
+      - name: Zip source
+        run: yarn zip:source
+      - name: Zip build
+        run: yarn firefox:zip
+      - name: Submit to the firefox addons store
+        uses: PlasmoHQ/bpp@v3.7.0
+        with:
+          file: ./rainbowbx.xpi
+          sourceFile: ./rainbowbx-source.zip
+          keys: ${{ secrets.BPP_KEYS_PROD_FIREFOX }}
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
